--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">
-                            <i class="uil uil-scenery nav__icon"></i> Contactme
+                            <i class="uil uil-message nav__icon"></i> Contactme
                         </a>
                     </li>
                 </ul>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="nav__btns">
-                <div class="nav__toggle" id="nav-togle">
+                <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
             </div>
@@ -70,7 +70,19 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/duvan-ramirez-469434222/" target="_blank"
+                            class="home__social-icon">
+                            <i class="uil uil-linkedin"></i>
+                        </a>
+                        <a href="https://github.com/Alismos" target="_blank" class="home__social-icon">
+                            <i class="uil uil-github"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--==================== ABOUT ====================-->
@@ -123,10 +135,10 @@
 
 
     <!--==================== SWIPER JS ====================-->
-    <script src=""></script>
+    <script src="./assets/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
-    <script src=""></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
