--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                         <a href="https://github.com/Alismos" target="_blank" class="home__social-icon">
                             <i class="uil uil-github"></i>
                         </a>
+                        <a href="https://gitlab.com/Alismos" target="_blank" class="home__social-icon">
+                            <i class="uil uil-gitlab"></i>
+                        </a>
+
                     </div>
                     <div class="home__blob" class="home__img">
                         <svg viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
@@ -96,14 +100,8 @@
                                 129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
                                 <image href="" />
-                                <image class="home__blob-img" xlink:href="assets/img/profile.png" />
+                                <image class="home__blob-img" x='40' y='10' xlink:href="assets/img/Alismos-mask.png" />
                             </g>
-                        </svg>
-                        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <path fill="#0F62FE"
-                                d="M38.3,-68.9C50.4,-59.3,61.6,-50.7,69.9,-39.3C78.2,-28,83.6,-14,84.3,0.4C85.1,14.9,81.2,29.8,72.8,40.8C64.3,51.9,51.3,59.1,38.4,64.6C25.5,70.1,12.8,73.8,-0.8,75.1C-14.3,76.4,-28.5,75.3,-40.4,69.2C-52.2,63.1,-61.6,52,-66.9,39.7C-72.2,27.3,-73.4,13.7,-74.5,-0.6C-75.5,-14.9,-76.4,-29.7,-72.2,-44C-68,-58.4,-58.8,-72.2,-46,-81.3C-33.1,-90.5,-16.5,-95,-1.7,-92C13.1,-89,26.1,-78.5,38.3,-68.9Z"
-                                transform="translate(100 100)" />
-                            <image class="home__blob-img" xlink:href="assets/img/profile.png" />
                         </svg>
                     </div>
 
@@ -117,6 +115,13 @@
                             Contact Me <i class="uil uil-message nav__icon button__icon"></i>
                         </a>
                     </div>
+                </div>
+                <div class="home__scroll">
+                    <a href="#about" class="home__scroll-button button--flex">
+                        <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+                        <span class="home__scroll-name">Scroll down</span>
+                        <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                    </a>
                 </div>
             </div>
         </section>
