--- a/index.html
+++ b/index.html
@@ -128,7 +128,32 @@
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
+            <section class="about section" id="about">
+                <h2 class="section__title">About Me</h2>
+                <span class="section__subtitle">My introduction</span>
 
+                <div class="about__container container grid">
+                    <img src="assets/img/about-jhin.gif" alt="" class="about__img">
+
+                    <div class="about__data">
+                        <p class="about__description">
+
+                        </p>
+
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">10+ Completed</span>
+                                <span class="about__info-name"> projects</span>
+                            </div>
+                            <div class="about__buttons">
+                                <a download="" href="" class="button button--flex">
+                                    Download CV <i class="uil uil-download-alt"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
 
         <!--==================== SKILLS ====================-->
