update about fields

--- a/index.html
+++ b/index.html
@@ -142,14 +142,28 @@
 
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">10+ Completed</span>
-                                <span class="about__info-name"> projects</span>
+                                <span class="about__info-title">1+</span>
+                                <span class="about__info-name"> Experience <br> years</bre></span>
                             </div>
-                            <div class="about__buttons">
-                                <a download="" href="" class="button button--flex">
-                                    Download CV <i class="uil uil-download-alt"></i>
-                                </a>
+                            <div>
+                                <span class="about__info-title">4+</span>
+                                <span class="about__info-name"> Completed <br> projects</span>
                             </div>
+
+                            <div>
+                                <span class="about__info-title">4+</span>
+                                <span class="about__info-name"> Programming <br> languages</span>
+                            </div>
+
+                            <div>
+                                <span class="about__info-title">4+</span>
+                                <span class="about__info-name"> Devops <br> tools </span>
+                            </div>
+                        </div>
+                        <div class="about__buttons">
+                            <a download="" href="" class="button button--flex">
+                                Download CV <i class="uil uil-download-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
