--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
-                                <h1 class="skills__title">Backend developer</h1>
+                                <h1 class="skills__titles">Backend developer</h1>
                                 <span class="skills__subtitle">More than 6 months</span>
                             </div>
 
@@ -191,42 +191,42 @@
 
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">HTML</h3>
                                     <span class="skills__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__one"></span>
+                                    <span class="skills__percentage skills__html"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
                                     <span class="skills__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__two"></span>
+                                    <span class="skills__percentage skills__css"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
                                     <span class="skills__number">65%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__three"></span>
+                                    <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">React</h3>
                                     <span class="skills__number">20%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__four"></span>
+                                    <span class="skills__percentage skills__react"></span>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                         <div class="skills__header">
                             <i class="uil uil-servers skills__icon"></i>
                             <div>
-                                <h1 class="skills__title">DevOps</h1>
+                                <h1 class="skills__titles">DevOps</h1>
                                 <span class="skills__subtitle">Less than 0 months</span>
                             </div>
 
@@ -246,7 +246,7 @@
 
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">AWS</h3>
                                     <span class="skills__number">40%</span>
                                 </div>
@@ -256,7 +256,7 @@
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Linux</h3>
                                     <span class="skills__number">40%</span>
                                 </div>
@@ -266,7 +266,7 @@
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Git</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
@@ -276,7 +276,7 @@
                             </div>
 
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">GCP</h3>
                                     <span class="skills__number">30%</span>
                                 </div>
