--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="skills__container container grid">
                 <div>
                     <!--==================== SKILL 1 ====================-->
-                    <div class="skills__content">
+                    <div class="skills__content skills__open">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
@@ -233,7 +233,7 @@
                     </div>
 
                     <!--==================== SKILL 2 ====================-->
-                    <div class="skills__content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-servers skills__icon"></i>
                             <div>
@@ -292,12 +292,160 @@
 
         <!--==================== QUALIFICATION ====================-->
         <section class="qualification section">
+            <h2 class="section__title">Qualification</h2>
+            <span class="section__subtitle">My personal journey</span>
 
+            <div class="qualification__container container">
+                <div class="qualification__tabs">
+                    <div class="qualification__button button--flex qualification__active" data-target="#education">
+                        <i class="uil uil-graduation-cap qualification__icon"></i>
+                        Education
+                    </div>
+
+                    <div class="qualification__button button--flex" data-target="#work">
+                        <i class="uil uil-suitcase-alt qualification__icon"></i>
+                        Work
+                    </div>
+                </div>
+
+                <div class="qualification__sections">
+                    <!--==================== QUALIFICATION CONTENT 1 ====================-->
+                    <div class="qualification__content">
+                        <!--==================== QUALIFICATION 1 ====================-->
+                        <div class="qualification__data qualification__active" data-content id="education">
+                            <div>
+                                <h3 class="qualification__title">Systems Enginner</h3>
+                                <span class="qualification__subtitle">Colombia - University</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2017-2022
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--==================== QUALIFICATION CONTENT 2 ====================-->
+                    <div class="qualification__content" data-content id="work">
+                        <!--==================== QUALIFICATION 1 ====================-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Backend Developer</h3>
+                                <span class="qualification__subtitle">Ki - Colombia</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2022-2023
+                                </div>
+
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!--==================== QUALIFICATION 2 ====================-->
+                        <div class="qualification__data">
+                            <div></div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title">DevOps Enginner</h3>
+                                <span class="qualification__subtitle">Perficient - Colombia</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2023
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
+            <h2 class="section__title">Services</h2>
+            <span class="section__subtitle">What i offer</span>
 
+            <div class="services__container container grid">
+                <!--==================== SERVICES 1 ====================-->
+                <div class="services__content">
+                    <div>
+                        <i class="uil uil-arrow services__icon"></i>
+                        <h3 class="services__title">Backend <br> Developer</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button--link services__button">
+                        View More
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">Backend <br> Developer</h4>
+                            <i class="uil uil-times services__modal-close"></i>
+
+                            <ul class="services__model-services grid">
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!--==================== SERVICES 2 ====================-->
+                <div class="services__content">
+                    <div>
+                        <i class="uil uil-web-grid services__icon"></i>
+                        <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button--link services__button">
+                        View More
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                            <i class="uil uil-times services__modal-close"></i>
+
+                            <ul class="services__model-services grid">
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                                <li class="services__model-services">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I...</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--==================== PORTFOLIO ====================-->
