add services and portfolio

--- a/index.html
+++ b/index.html
@@ -393,18 +393,18 @@
                             <h4 class="services__modal-title">Backend <br> Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
-                            <ul class="services__model-services grid">
-                                <li class="services__model-services">
+                            <ul class="services__modal-services grid">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>Web Applications</p>
                                 </li>
-                                <li class="services__model-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>Custom Development</p>
                                 </li>
-                                <li class="services__model-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>API Development and Integration</p>
                                 </li>
                             </ul>
                         </div>
@@ -415,7 +415,7 @@
                 <div class="services__content">
                     <div>
                         <i class="uil uil-web-grid services__icon"></i>
-                        <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                        <h3 class="services__title">DevOps <br> Enginner</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services__button">
@@ -425,21 +425,21 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                            <h4 class="services__modal-title">DevOps <br> Enginner</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
-                            <ul class="services__model-services grid">
-                                <li class="services__model-services">
+                            <ul class="services__modal-services grid">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>Continuous integration and continuous deployment</p>
                                 </li>
-                                <li class="services__model-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>Infrastructure support and argumentation</p>
                                 </li>
-                                <li class="services__model-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I...</p>
+                                    <p>Release management and automation</p>
                                 </li>
                             </ul>
                         </div>
@@ -450,6 +450,25 @@
 
         <!--==================== PORTFOLIO ====================-->
         <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">Portfolio</h2>
+            <span class="section__subtitle">Most recent Work</span>
+
+            <div class="portfolio__container container">
+                <div>
+                    <div class="portfolio__content grid">
+                        <img src="./assets/img/website-peanut.png" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Peanut</h3>
+                            <p class="portfolio__description">Peanut is a website where you'll find several methods used
+                                to solve numerical analysis problems.</p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon "></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
