update website to be responsive with medium devices

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         </a>
 
                     </div>
-                    <div class="home__blob" class="home__img">
-                        <svg viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
+                    <div class="home__img">
+                        <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <mask id="mask0" mask-type="alpha">
                                 <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
@@ -110,7 +110,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Duvan Ramirez</h1>
-                        <h3 class="home__subtitle">DevOps</h3>
+                        <h3 class="home__subtitle">DevOps Enginner</h3>
                         <p class="home__description">I'm passionate about programming and how it helps us to take
                             decisions based on data, I love mathematics, good practices, data structures and algorithms.
                         </p>
@@ -148,14 +148,10 @@
                                 <span class="about__info-title">1+</span>
                                 <span class="about__info-name"> Experience <br> years</bre></span>
                             </div>
-                            <div>
-                                <span class="about__info-title">4+</span>
-                                <span class="about__info-name"> Completed <br> projects</span>
-                            </div>
 
                             <div>
-                                <span class="about__info-title">4+</span>
-                                <span class="about__info-name"> Programming <br> languages</span>
+                                <span class="about__info-title">1+</span>
+                                <span class="about__info-name"> Completed <br> projects</span>
                             </div>
 
                             <div>
