--- a/index.html
+++ b/index.html
@@ -545,21 +545,22 @@
                             <label for="" class="contact__content">Email</label>
                             <input type="email" class="contact__input">
                         </div>
-                        <div class="contact__content">
-                            <label for="" class="contact__content">Project</label>
-                            <input type="text" class="contact__input">
-                        </div>
-                        <div class="contact__content">
-                            <label for="" class="contact__content">Message</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
-                        </div>
+                    </div>
 
-                        <div>
-                            <a href="#" class="button button--flex">
-                                Send
-                                <i class="uil uil-message button__icon"></i>
-                            </a>
-                        </div>
+                    <div class="contact__content">
+                        <label for="" class="contact__content">Project</label>
+                        <input type="text" class="contact__input">
+                    </div>
+                    <div class="contact__content">
+                        <label for="" class="contact__content">Message</label>
+                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                    </div>
+
+                    <div>
+                        <a href="#" class="button button--flex">
+                            Send
+                            <i class="uil uil-message button__icon"></i>
+                        </a>
                     </div>
                 </form>
             </div>
@@ -580,10 +581,10 @@
                         <a href="#services" class="footer__link">Services</a>
                     </li>
                     <li>
-                        <a href="#services" class="footer__link">Portfolio</a>
+                        <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#services" class="footer__link">Contactme</a>
+                        <a href="#contact" class="footer__link">Contactme</a>
                     </li>
                 </ul>
 
